--- a/src/components/profiles/MyPosts/MyPosts.module.css
+++ b/src/components/profiles/MyPosts/MyPosts.module.css
@@ -10,3 +10,12 @@ button {
   margin-bottom: 5px;
 
 }
+textarea {
+  width: 100%;
+  height: 130px;
+  border-radius: 10px;
+  outline: none;
+  resize: none;
+  padding: 5px 10px;
+  vertical-align: bottom;
+}
