--- a/src/components/dialogs/Dialogs.module.css
+++ b/src/components/dialogs/Dialogs.module.css
@@ -8,11 +8,6 @@
     text-decoration: none;
 }
 
-.messages {
-    background-color: #b9dcee;
-    margin: 20px;
-}
-
 .dialogsItem {
     background-color: #b9dcee;
     padding: 20px;
@@ -20,5 +15,24 @@
     border-right-style: solid;
     border-color: white;
     border-radius: 10px 0px 0px 10px;
+}
 
+.messages {
+    display: grid;
+    grid-template-rows: 420px 1fr;
+    padding: 20px;
+    border-radius: 0px 10px 10px 0px;
+}
+
+.messages2 {
+    background-color: rgba(185, 220, 238, 0.05);
+}
+
+.inputWindow {
+    display: grid;
+    align-content: end;
+}
+
+textarea {
+    max-width: 700px;
 }
