--- a/src/components/profiles/profileInfo/ProfileInfo.module.css
+++ b/src/components/profiles/profileInfo/ProfileInfo.module.css
@@ -6,7 +6,6 @@ img {
     padding-left: 19px;
 }
 .contactsUser {
-    background-color: white;
     padding: 10px;
     border-radius: 10px;
     border-color: black;
@@ -18,5 +17,21 @@ img {
 }
 
 .contacts {
+    border-top: black solid 1px;
     padding-left: 20px;
+}
+
+.info {
+    margin: 10px 0px 10px 0px;
+    width: 500px;
+    background-color: white;
+    padding: 10px;
+}
+
+.status {
+    margin: 5px 0px;
+    width: 150px;
+    border-top: black solid 1px;
+    border-bottom: black solid 1px;
+
 }
