--- a/src/components/profiles/profileInfo/ProfileInfo.module.css
+++ b/src/components/profiles/profileInfo/ProfileInfo.module.css
@@ -38,3 +38,8 @@ border-top: black solid 1px
     border-bottom: black solid 1px;
 
 }
+
+button {
+    border-radius: 4px;
+    background-color: #5a9dd2;
+}
