--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -4,10 +4,12 @@
 
 .pageNumber {
     padding: 2px;
-    border: 1px solid grey;
+
 }
 
 .pageNumber.selectedPage {
     font-weight: bold;
-    border-color: black;
+    border-color:  black;
+
+    font-size: 20px;
 }
