--- a/src/components/dialogs/Dialogs.module.css
+++ b/src/components/dialogs/Dialogs.module.css
@@ -34,8 +34,13 @@
 }
 
 textarea {
-    max-width: 700px;
-}
+    width: 700px;
+    height: 130px;
+    border-radius: 10px;
+    outline: none;
+    resize: none;
+    padding: 5px 10px;
+    vertical-align: bottom;}
 
 
 button {
