--- a/src/components/profiles/profileInfo/ProfileInfo.module.css
+++ b/src/components/profiles/profileInfo/ProfileInfo.module.css
@@ -32,8 +32,7 @@ border-top: black solid 1px
 }
 
 .status {
-    margin: 5px 0px;
-    width: 150px;
+    margin: 5px 0px 10px 0px;
     border-top: black solid 1px;
     border-bottom: black solid 1px;
 
@@ -42,4 +41,8 @@ border-top: black solid 1px
 button {
     border-radius: 4px;
     background-color: #5a9dd2;
+}
+
+.buttonSend {
+  float: right;
 }
