--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -9,12 +9,14 @@
 
 .pageNumber.selectedPage {
     font-weight: bold;
-    border-color:  black;
+    border-color: black;
 
     font-size: 20px;
 }
 
-.paginatorInserPage {
+.inputPage textarea {
     width: 40px;
-    height: 20px;
+    height: 15px;
+    outline: none;
+    resize: none;
 }
